--- a/FE/package.json
+++ b/FE/package.json
@@ -9,12 +9,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "framer-motion": "^11.15.0",
+        "mermaid": "^11.12.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.28.0",
         "react-icons": "^5.4.0",
         "react-markdown": "^9.0.1",
-        "framer-motion": "^11.15.0"
+        "react-router-dom": "^6.28.0"
     },
     "devDependencies": {
         "@types/react": "^18.3.12",
