--- a/BE/.env.example
+++ b/BE/.env.example
@@ -4,3 +4,4 @@ AZURE_OPENAI_API_KEY=your-azure-openai-key-here
 AZURE_OPENAI_DEPLOYMENT_NAME=gpt-5-mini
 AZURE_OPENAI_API_VERSION=2024-12-01-preview
 TAVILY_API_KEY=tvly-dev-your-tavily-key-here
+DATABASE_URL=postgresql://postgres.[ref]:[password]@aws-0-region.pooler.supabase.com:6543/postgres
